improvements to weather endpoint
